add search endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 ### Java template
 # Compiled class file
 *.class
-
+bin/
 # Log file
 *.log
 
@@ -27,8 +27,8 @@ hs_err_pid*
 .idea/
 /.metadata/
 /apache-tomcat-9.0.1
-.settings/org.eclipse.wst.ws.service.policy.prefs
 WebContent/WEB-INF/
 .recommenders/
 *.DS_Store
+*.settings/
 ChallengeMe/.classpath
